--- a/remove-cancelled-workflow/Dockerfile
+++ b/remove-cancelled-workflow/Dockerfile
@@ -1,6 +1,13 @@
 # Container image that runs your code
 FROM ubuntu:latest
 
+LABEL repository="http://github.com/qlik-oss/qmfe-actions"
+LABEL homepage="http://github.com/qlik-oss/qmfe-actions/remove-cancelled-workflow"
+LABEL "com.github.actions.name"="remove-cancelled-workflow"
+LABEL "com.github.actions.description"="Removes previously cancelled workflows"
+LABEL "com.github.actions.icon"="delete"
+LABEL "com.github.actions.color"="red"
+
 RUN apt-get update && apt-get install -y \
     curl \
     jq
