fix: docker container

--- a/merge-branch/Dockerfile
+++ b/merge-branch/Dockerfile
@@ -8,7 +8,11 @@ LABEL "com.github.actions.description"="Merges source branch to target branch."
 LABEL "com.github.actions.icon"="git-merge"
 LABEL "com.github.actions.color"="green"
 
-RUN apk --no-cache add bash curl git git-lfs jq
+RUN apt-get update && apt-get install -y \
+    bash \
+    git \
+    curl \
+    jq
 
 ADD entrypoint.sh /entrypoint.sh
 
