fix: test without git config

--- a/merge-branch/Dockerfile
+++ b/merge-branch/Dockerfile
@@ -8,11 +8,7 @@ LABEL "com.github.actions.description"="Merges source branch to target branch."
 LABEL "com.github.actions.icon"="git-merge"
 LABEL "com.github.actions.color"="green"
 
-RUN apt-get update && apt-get install -y \
-    bash \
-    git \
-    curl \
-    jq
+RUN apt-get update && apt-get install -y git
 
 ADD entrypoint.sh /entrypoint.sh
 
