fix: install nodejs

--- a/import-map-to-aws/Dockerfile
+++ b/import-map-to-aws/Dockerfile
@@ -4,7 +4,7 @@ FROM amazon/aws-cli:2.2.29
 # add jq to image
 RUN yum install jq -y
 # add node to image
-RUN yum install nodejs -y
+RUN yum install nodejs14 -y
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY entrypoint.sh /entrypoint.sh
