--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Create import-map
         run: |
-          echo '{"imports":{"@qmfe/startup":"https://cdn.qlik-stage.com/qmfe/main-web-container/0.22.0/qmfe-startup.js"}}\n' > ./import-map.json
+          echo '{"imports":{"@qmfe/startup":"https://cdn.qlik-stage.com/qmfe/main-web-container/0.22.0/qmfe-startup.js"}}' > ./import-map.json
       - name: Test import-map-to-aws action
         uses: qlik-oss/qmfe-actions/import-map-to-aws@generate-metrics
         with:
@@ -69,7 +69,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create fake import-map
         run: |
-          echo '{"imports":{"@qmfe/foo":"https://my-cdn.com/qmfe/foo/1.2.3/qmfe-foo.js"}}\n' > ./import-map.json
+          echo '{"imports":{"@qmfe/foo":"https://my-cdn.com/qmfe/foo/1.2.3/qmfe-foo.js"}}' > ./import-map.json
       - name: Test update-qmfe-import-map action
         uses: qlik-oss/qmfe-actions/update-qmfe-import-map@v1
         with:
