--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -55,7 +55,7 @@ jobs:
         run: |
           echo '{"imports":{"@qmfe/startup":"https://cdn.qlik-stage.com/qmfe/main-web-container/0.22.0/qmfe-startup.js"}}' > ./import-map.json
       - name: Test import-map-to-aws action
-        uses: qlik-oss/qmfe-actions/import-map-to-aws@generate-metrics
+        uses: qlik-oss/qmfe-actions/import-map-to-aws@v1
         with:
           aws-bucket-name: qcs-stage-cdn.qlikcloud.com
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
