--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -58,8 +58,8 @@ jobs:
         uses: qlik-oss/qmfe-actions/import-map-to-aws@v1
         with:
           aws-bucket-name: qcs-stage-cdn.qlikcloud.com
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: "123"
+          aws-secret-access-key: "ABC"
           aws-distribution-id: ${{ secrets.AWS_DISTRIBUTION_ID }}
           import-map-url: "https://cdn.qlik-stage-com/qmfe/import-map.json"
           dry-run: "true"
