--- a/.github/workflows/test-actions.yaml
+++ b/.github/workflows/test-actions.yaml
@@ -74,7 +74,7 @@ jobs:
         run: |
           echo '{"name": "test-project", "version": "0.0.1", "scripts": { "build-npm": "mkdir ./dist-types && cp package.json ./dist-types" } }' > ./package.json
       - name: Test publish-npm-integration-build action
-        uses: qlik-oss/qmfe-actions/publish-npm-integration-build@bgd/int-build-action
+        uses: qlik-oss/qmfe-actions/publish-npm-integration-build@v1
         with:
           build-script: npm run build-npm
           dist-folder: "./dist-types"
