--- a/import-map-to-aws/action.yaml
+++ b/import-map-to-aws/action.yaml
@@ -44,6 +44,9 @@ inputs:
     description: "file name of import-map"
     required: false
     default: "import-map.json"
+outputs:
+  import-map-state: 
+    description: "Outputs wether the import map is locked or not"
 
 runs:
   using: docker
