refactor: use better names on entrypoints
The repo was starting to have a lot of `entrypoints.sh` files so
this change sets the direction of using a descriptive name on the
docker entrypoint file

--- a/import-map-to-aws/Dockerfile
+++ b/import-map-to-aws/Dockerfile
@@ -13,4 +13,4 @@ COPY entrypoint.sh /entrypoint.sh
 COPY translate-import-map-to-metrics.js /translate-import-map-to-metrics.js
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/import-map-to-aws.sh"]
