--- a/remove-cancelled-workflow/Dockerfile
+++ b/remove-cancelled-workflow/Dockerfile
@@ -9,4 +9,4 @@ RUN apt-get update && apt-get install -y \
 COPY entrypoint.sh /entrypoint.sh
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/removed-cancelled-workflow.sh"]
