--- a/checksum-file-to-aws/Dockerfile
+++ b/checksum-file-to-aws/Dockerfile
@@ -6,4 +6,4 @@ FROM amazon/aws-cli:2.3.0
 COPY entrypoint.sh /entrypoint.sh
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["/checksum-file-to-aws.sh"]
