fix: copy correct file in dockerfiles

--- a/remove-cancelled-workflow/Dockerfile
+++ b/remove-cancelled-workflow/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     jq
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY entrypoint.sh /entrypoint.sh
+COPY removed-cancelled-workflow.sh /removed-cancelled-workflow.sh
 
-# Code file to execute when the docker container starts up (`entrypoint.sh`)
+# Code file to execute when the docker container starts up (`removed-cancelled-workflow.sh`)
 ENTRYPOINT ["/removed-cancelled-workflow.sh"]
