--- a/checksum-file-to-aws/Dockerfile
+++ b/checksum-file-to-aws/Dockerfile
@@ -3,7 +3,7 @@ FROM amazon/aws-cli:2.3.0
 
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY entrypoint.sh /entrypoint.sh
+COPY checksum-file-to-aws.sh /checksum-file-to-aws.sh
 
-# Code file to execute when the docker container starts up (`entrypoint.sh`)
+# Code file to execute when the docker container starts up (`checksum-file-to-aws.sh`)
 ENTRYPOINT ["/checksum-file-to-aws.sh"]
