--- a/import-map-to-aws/Dockerfile
+++ b/import-map-to-aws/Dockerfile
@@ -9,8 +9,8 @@ RUN curl -sL https://rpm.nodesource.com/setup_14.x | bash -
 RUN yum install -y nodejs
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY entrypoint.sh /entrypoint.sh
+COPY import-map-to-aws.sh /import-map-to-aws.sh
 COPY translate-import-map-to-metrics.js /translate-import-map-to-metrics.js
 
-# Code file to execute when the docker container starts up (`entrypoint.sh`)
+# Code file to execute when the docker container starts up (`import-map-to-aws.sh`)
 ENTRYPOINT ["/import-map-to-aws.sh"]
