--- a/qmfe-to-aws/Dockerfile
+++ b/qmfe-to-aws/Dockerfile
@@ -3,7 +3,7 @@ FROM amazon/aws-cli:2.3.0
 
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY entrypoint.sh /entrypoint.sh
+COPY qmfe-to-aws.sh /qmfe-to-aws.sh
 
-# Code file to execute when the docker container starts up (`entrypoint.sh`)
+# Code file to execute when the docker container starts up (`qmfe-to-aws.sh`)
 ENTRYPOINT ["/qmfe-to-aws.sh"]
