fix: docker build issue
https://github.com/nodesource/distributions/issues/1290

--- a/import-map-to-aws/Dockerfile
+++ b/import-map-to-aws/Dockerfile
@@ -3,10 +3,10 @@ FROM amazon/aws-cli:2.3.2
 
 # add jq to image
 RUN yum update -y \
-    && yum install -y gcc-c++ make jq
+    && yum install -y gcc-c++ make jq wget
 # add node to image
-RUN curl -sL https://rpm.nodesource.com/setup_14.x | bash -
-RUN yum install -y nodejs
+RUN wget https://rpm.nodesource.com/pub_14.x/el/7/x86_64/nodejs-14.18.1-1nodesource.x86_64.rpm
+RUN yum install -y nodejs-14.18.1-1nodesource.x86_64.rpm
 
 # Copies your code file from your action repository to the filesystem path `/` of the container
 COPY import-map-to-aws.sh /import-map-to-aws.sh
