fix: update docs and equality

--- a/qmfe-to-aws/action.yaml
+++ b/qmfe-to-aws/action.yaml
@@ -48,7 +48,7 @@ inputs:
     required: false
     default: "public,max-age=31536000,s-maxage=2629800,immutable"
   allow-overwrite:
-    description: "If true, allows existing files to be overwritten"
+    description: "If true, allows existing files to be overwritten (Danger! Use with CAUTION)"
     required: false
     default: "false"
 
