feat(update-qmfe-import-map): support `repo` prop (#110)
This will allow us to send in the repo name from the event to get
the correct link to each projects release notes. In some cases
it is broken when the module is not the same as the repository.

--- a/update-qmfe-import-map/action.yaml
+++ b/update-qmfe-import-map/action.yaml
@@ -6,7 +6,7 @@ inputs:
   dry-run:
     description: "For debugging purposes. Only logs out the import-map update."
     required: false
-  namespace:
+  qmfe-namespace:
     description: "The components namespace, defaults to 'qmfe' and will cause the component name to be @namespace/qmfe-id"
     required: false
   qmfe-id:
@@ -17,6 +17,9 @@ inputs:
     required: false
   qmfe-submodules:
     description: "Set to true if this package is exposing submodules inside the package"
+    required: false
+  repo:
+    description: "Repository of the module being updated. Used for example in the link to changelogs because the repo name might differ from the module id. Defaults to the qmfe-id value."
     required: false
   github-team:
     description: "Github handle for the team that gets added as a reviewer for the created PR. Useful if teams want to be notified about the update"
