--- a/update-qmfe-import-map/package.json
+++ b/update-qmfe-import-map/package.json
@@ -22,6 +22,7 @@
     "dotenv": "16.0.1"
   },
   "devDependencies": {
+    "@tsconfig/node16-strictest-esm": "1.0.3",
     "@types/jest": "28.1.6",
     "@types/node": "16.11.47",
     "esbuild": "0.14.53",
