--- a/update-qmfe-import-map/tsconfig.json
+++ b/update-qmfe-import-map/tsconfig.json
@@ -1,14 +1,8 @@
 {
+  "extends": "@tsconfig/node16-strictest-esm/tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "target": "es2015",
-    "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
-    "noImplicitAny": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "rootDir": "./src"
   },
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "index.js", "**/*.test.ts"]
 }
