--- a/publish-npm-integration-build/action.yaml
+++ b/publish-npm-integration-build/action.yaml
@@ -17,10 +17,6 @@ inputs:
     description: "Skips the actual publishing steps, mainly for testing the action"
     required: false
     default: "false"
-  version:
-    description: "Integration version of the npm build"
-    required: false
-    default: ""
 
 runs:
   using: "composite"
@@ -28,14 +24,36 @@ runs:
     - name: Generate integration version value
       shell: bash
       run: |
-        if [ -z ${{ inputs.version }} ]; then
-            BUILD_ID=$(date +%s)
-            VER=$(node -e "console.log(require('./package.json').version.concat('-$BUILD_ID'))")
-          else
-            VER=${{ inputs.version }}
+        set -o pipefail
+        _sha=${_sha:=$SHA}
+        # Unshallow git repository. Do not fail in case the repository is already unshallowed.
+        git fetch --prune --unshallow || true
+
+        # git-describe - Give an object a human readable name based on an available ref
+        # On PR actions/checkout checkouts a merge commit instead of commit sha, git describe
+        # returns merge commit. To avoid this unpredictable commit sha, we will describe
+        # the actual commit
+        git_rev=$(git describe --tags --abbrev=7 ${_sha} --match "v[0-9]*.[0-9]*.[0-9]*")
+
+        # If git revision is not an exact semver tag, then bump patch
+        # An exact semver does not contain a '-'
+        if [[ "$git_rev" == *-* ]]; then
+          # Transforms 0.0.0-0-g1234abc to 0.0.1-0.g123abc
+          git_rev=$(echo $git_rev | perl -ne 'm/(^v\d+\.\d+\.)(\d+)(.*)(\-g)(.*$)/ && print $1 . int(1+$2) . $3 . ".g" . $5')
         fi
+        # If no version is returned from git describe, generate one
+        [ -z "$git_rev" ] && git_rev="v0.0.0-0.g${_sha:0:7}"
+        # Return Version without v prefix
         
-        echo "$VER"
+        VERSION=${git_rev#v}
+        # On tag push that matches refs/tags/v*.*.*, use that version regardless of git describe
+        if echo "$GITHUB_REF" | grep -E 'refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$'; then
+            VERSION=${GITHUB_REF#*/v}
+            RELEASE_TAG="1"
+        fi
+
+        echo "Set version: ${VERSION}"
+        echo "::set-output name=VER::${VERSION}"
         if (echo $VER | egrep -- '-[0-9a-z.]+$' 1> /dev/null); then
           npm version $VER --no-git-tag-version
         fi
