--- a/publish-npm-integration-build/action.yaml
+++ b/publish-npm-integration-build/action.yaml
@@ -45,15 +45,14 @@ runs:
         [ -z "$git_rev" ] && git_rev="v0.0.0-0.g${_sha:0:7}"
         # Return Version without v prefix
         
-        VERSION=${git_rev#v}
+        VER=${git_rev#v}
         # On tag push that matches refs/tags/v*.*.*, use that version regardless of git describe
         if echo "$GITHUB_REF" | grep -E 'refs/tags/v[0-9]+\.[0-9]+\.[0-9]+$'; then
-            VERSION=${GITHUB_REF#*/v}
+            VER=${GITHUB_REF#*/v}
             RELEASE_TAG="1"
         fi
 
-        echo "Set version: ${VERSION}"
-        echo "::set-output name=VER::${VERSION}"
+        echo "Set version: ${VER}"
         if (echo $VER | egrep -- '-[0-9a-z.]+$' 1> /dev/null); then
           npm version $VER --no-git-tag-version
         fi
